--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <div class="about__info">
                         <div>
                             <spam class="about__info-title">
-                                <h3>2nd Year CSE Student, </h3>
+                                <h3>Final Year CSE Student, </h3>
                             </spam>
                         </div>
                         <div>
